# oapi-codegen

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  ops  spec.yaml  version
.github/: dependabot.yml
.github/workflows/: release-pr.yml  test.yaml
examples/: simple-axum.rs
src/: main.rs
