[package]
name = "oapi-codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codegen = "0.2.0"
nutype = { features=["serde", "regex"], version="0.3.1" }
openapiv3 = "1.0.2"
regex = "1.8.4"
serde = "1.0.166"
serde_yaml = "0.9.22"
thiserror = "1.0.43"
