[package]
name = "oapi-codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codegen = "0.2.0"
nutype = { features=["serde", "regex"], version="0.3.1" }
openapiv3 = "1.0.3"
regex = "1.10.2"
serde = "1.0.168"
serde_yaml = "0.9.27"
thiserror = "1.0.50"
