[package]
name = "oapi-codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codegen = "0.2.0"
nutype = { features=["serde", "regex"], version="0.4.0" }
openapiv3 = "2.0.0"
regex = "1.10.3"
serde = "1.0.193"
serde_yaml = "0.9.31"
thiserror = "1.0.57"
